# sbi-ddm

./: .gitignore  README.md  README_lib.md  config.yml  main.py  pyproject.toml
notebooks/: compare_priors_to_data.ipynb  feature_analysis_23.ipynb  feature_visualizations.ipynb  plot_data_posteriors.ipynb  sbi_ddm_pipeline_demo.ipynb  snle_multi_patch_jax_data.ipynb  snle_multi_patch_jax_sweep_drift.ipynb
sbi_ddm_analysis/feature_engineering/: enhanced_stats_37.py
sbi_ddm_analysis/snle/: run_inference_save_posteriors.py  snle_inference_jax.py
sbi_ddm_analysis/snle/snle_sweep/: analyze_sweep.py  compare_models.py  snle_parameter_sweep_jax.py
src/vr_foraging_sbi_ddm/: .gitignore  __init__.py  feature_engineering.py  models.py  pipeline.py  plot_utils.py  run_validation.py  simulator.py  sweep.py  validation.py
src/vr_foraging_sbi_ddm/analysis/: visualize_parameters.py
src/vr_foraging_sbi_ddm/snle/: models.py  npe_inference_jax.py  run_inference_save_posteriors.py  snle_inference_jax.py  snle_utils_jax.py
src/vr_foraging_sbi_ddm/snle/snle_sweep/: analyze_sweep.py  compare_models.py  snle_parameter_sweep_jax.py
