[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[project]
name = "vr_foraging_sbi_ddm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]; sys_platform == 'linux'",
    "jax; sys_platform != 'linux'",
    "tensorflow-probability>=0.25.0",
    "sbijax @ git+https://github.com/dirmeier/sbijax@0bc94d2", # lauradriscoll fixed a jax import bug but no release yet, so we point to the commit directly
    "numpyro>=0.20.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pydantic-settings>=2.12.0",
    "ipython>=9.10.0",
    "tensorflow[and-cuda]>=2.20.0",
]


[dependency-groups]

dev = [
    "ruff",
    "codespell",
]

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock,*Generated.cs'
ignore-words-list = 'nd'

[tool.uv]
default-groups = ['dev']
required-version = '>=0.8.4'
